handeled auth, users, league, players
