# project/routes/utils/far_utils.js
@@ -1,0 +1,25 @@
+const DButils = require("./DButils");
+
+async function checkIfFarIsValid(userId){
+    if (userId === undefined){
+        return false
+    }
+
+    const referee = await DButils.execQuery(
+        // `select ifnull((select refereeId from referees where refereeId=${userId}), No Result Found)`
+        `select * from FARs where FARId=${userId}`
+    )
+    if(referee[0] === undefined){
+        return false;
+    }
+    return true;
+}
+
+async function addMatchToDB(match){
+    await DButils.execQuery(
+        `INSERT INTO matches (league, season, stage, matchDate, matchHour , hostTeam , guestTeam , stadium , refereeId, score) VALUES (${match.league}, N'${match.season}', ${match.stage}, N'${match.matchDate}', N'${match.matchHour}', N'${match.hostTeam}', N'${match.guestTeam}', N'${match.stadium}', ${match.refereeId}, N'${match.score}')`
+    )
+}
+
+exports.addMatchToDB = addMatchToDB
+exports.checkIfFarIsValid = checkIfFarIsValid
